Fixed gradient overlap with title

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ body{
 h1.maxfangx{
   display: inline-block;
   margin-top: 40px;
-  margin-left: 40px;
+  margin-left: 6%;
 }
 
 .maxfangx{
@@ -33,7 +33,7 @@ h1.maxfangx{
   position: absolute;
   top: 0px;
   bottom: 0px;
-  width: 15%;
+  width: 5%;
 }
 
 .slide-left{
